--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="EwJohIuC-qzixLKKvV5qwyI6mxYlwHBTmeLT4Sh3K8Y" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Інтернет Шахраї avimed.com.ua Дніпро</title>
