--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 <body>
     <h1>Інтернет Шахраї avimed.com.ua Дніпро</h1>
     <ul>
-        <li><a href="https://">Інтернет Шахраї avimed.com.ua Дніпро</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0961731108">Інтернет Шахраї avimed.com.ua Дніпро 0961731108</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80961731108">Інтернет Шахраї avimed.com.ua Дніпро 80961731108</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380961731108">Інтернет Шахраї avimed.com.ua Дніпро 380961731108</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380961731108">Інтернет Шахраї avimed.com.ua Дніпро +380961731108</a></li>
+
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0975737561">Інтернет Шахраї avimed.com.ua Дніпро 0975737561</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80975737561">Інтернет Шахраї avimed.com.ua Дніпро 80975737561</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380975737561">Інтернет Шахраї avimed.com.ua Дніпро 380975737561</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380975737561">Інтернет Шахраї avimed.com.ua Дніпро +380975737561</a></li>
+
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0639849844">Інтернет Шахраї avimed.com.ua Дніпро 0639849844</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80639849844">Інтернет Шахраї avimed.com.ua Дніпро 80639849844</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380639849844">Інтернет Шахраї avimed.com.ua Дніпро 380639849844</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380639849844">Інтернет Шахраї avimed.com.ua Дніпро +380639849844</a></li>
+
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0506356131">Інтернет Шахраї avimed.com.ua Дніпро 0506356131</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80506356131">Інтернет Шахраї avimed.com.ua Дніпро 80506356131</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380506356131">Інтернет Шахраї avimed.com.ua Дніпро 380506356131</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380506356131">Інтернет Шахраї avimed.com.ua Дніпро +380506356131</a></li>
+
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0660792338">Інтернет Шахраї avimed.com.ua Дніпро 0660792338</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80660792338">Інтернет Шахраї avimed.com.ua Дніпро 80660792338</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380660792338">Інтернет Шахраї avimed.com.ua Дніпро 380660792338</a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380660792338">Інтернет Шахраї avimed.com.ua Дніпро +380660792338</a></li>
+
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/0639849844 ">Інтернет Шахраї avimed.com.ua Дніпро 0639849844 </a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/80639849844 ">Інтернет Шахраї avimed.com.ua Дніпро 80639849844 </a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/380639849844 ">Інтернет Шахраї avimed.com.ua Дніпро 380639849844 </a></li>
+        <li><a href="https://www.telefonnyjdovidnyk.com.ua/nomer/+380639849844 ">Інтернет Шахраї avimed.com.ua Дніпро +380639849844 </a></li>
     </ul>
 </body>
 </html>
